--- a/src/app/pages/main/main.css
+++ b/src/app/pages/main/main.css
@@ -224,7 +224,7 @@
 .mainServicesCallMe {
     margin: 0;
 
-    font-size: 26px;
+    font-size: 22px;
     color: #d4ac0b;
 }
 
@@ -236,9 +236,9 @@
     width: 150px;
 
     margin-top: 15px;
-    padding: 5px 0;
+    padding: 2px 0;
 
-    font-size: 18px;
+    font-size: 16px;
     color: #333;
     text-decoration: none;
 
@@ -255,7 +255,7 @@
 }
 
 .mainServicesLinkImg {
-    width: 20px;
+    width: 16px;
 
     margin-right: 10px;
     padding: 4px;
@@ -265,7 +265,31 @@
     background-color: #FAD232;
 }
 
+.mainServicesAnotherServicesRow {
+}
 
+.mainServicesAnotherServiceSkudImgWrapper {
+    position: relative;
+    height: 150px;
+    
+}
+
+.mainServicesAnotherServiceSkudImg {
+    width: 100%;
+    height: 100%;
+
+    border-radius: 20px;
+
+    position: absolute;
+    object-fit: cover;
+}
+
+.mainServicesAnotherServiceSkudTextWrapper {
+    display: flex;
+    justify-content: space-between;
+
+    padding: 20px;
+}
 
 
 
