--- a/src/app/pages/uslugi/uslugi.css
+++ b/src/app/pages/uslugi/uslugi.css
@@ -1,3 +1,63 @@
+.uslugiAttentionWrapper {
+    margin: 30px 0;
+}
+
+.uslugiAttention {
+    width: 80%;
+
+    display: flex;
+    align-items: center;
+
+    box-sizing: border-box;
+    padding: 20px;
+
+    border-radius: 20px;
+
+    background-color: #FFF9E7;
+
+    -webkit-box-shadow: 4px 4px 29px 4px rgba(254, 208, 62, 0.2);
+    -moz-box-shadow: 4px 4px 29px 4px rgba(254, 208, 62, 0.2);
+    box-shadow: 4px 4px 29px 4px rgba(254, 208, 62, 0.2);
+
+    
+
+}
+
+.uslugiAttentionImg {
+    width: 22px;
+
+    margin-right: 20px;
+}
+
+.uslugiAttentionTextContent {
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.uslugiAttentionTextHeadline {
+    font-size: 24px;
+    font-weight: 600;
+    color: #fdc713;
+
+    margin-bottom: 10px;
+
+}
+
+.uslugiAttentionText {
+    margin: 2px 0;
+    font-size: 16px;
+    font-weight: 600;
+    color: #555555;
+    line-height: 110%;
+}
+
+
+
+
+
 .uslugi {
     display: flex;
     justify-content: space-between;
@@ -22,6 +82,11 @@
     border-radius: 20px;
 
     background-color: #ad8e00;
+}
+
+.uslugiShalgbaumAndVideoTextContent {
+    position: relative;
+    z-index: 10;
 }
 
 .uslugiShalgbaumAndVideoHeadline {
@@ -98,10 +163,15 @@
 
 .uslugiShalgbaumAndVideoImgWrapper {
     position: absolute;
+    z-index: 5;
     bottom: 0;
     right: 20px;
     text-align: right;
 
+}
+
+.shlagb {
+    opacity: .9;
 }
 .uslugiShalgbaumAndVideoImg {
     width: 210px;
@@ -115,14 +185,14 @@
 }
 
 .uslugiAnotherWrapper {
-    height: 170px;
+    height: 200px;
     background-color: #b88700;
     
     padding: 20px;
     
     border-radius: 20px;
 
-
+    box-sizing: border-box;
     
 
 }
@@ -135,6 +205,7 @@
     justify-content: space-between;
 
     position: relative;
+    z-index: 2;
 }
 
 
@@ -152,6 +223,7 @@
 
 .uslugiAnotherImgContent {
     position: absolute;
+    z-index: 1;
     bottom: 0;
     right: 0;
 }
@@ -195,6 +267,28 @@
 }
 
 @media screen and (min-width: 1980px) {
+    .uslugiAttentionWrapper {
+        margin-bottom: 40px;
+    }
+    .uslugiAttention {
+        width: 60%;
+
+        padding: 25px;
+    }
+
+    .uslugiAttentionTextHeadline {
+        font-size: 36px;
+    }
+
+    .uslugiAttentionText {
+        font-size: 18px;
+    }
+
+    .uslugiAttentionImg {
+        width: 26px;
+    }
+
+
     /* uslugi */
     .uslugiShalgbaumAndVideo {
         height: 800px;
@@ -268,6 +362,17 @@
 }
 
 @media screen and (max-width: 1024px) {
+    .uslugiAttention {
+        width: 100%;
+    }
+
+    .uslugiAttentionTextHeadline {
+        font-size: 30px;
+    }
+
+
+
+
     .uslugi {
         flex-wrap: wrap;
     }
@@ -327,6 +432,129 @@
     }
 
     .uslugiAnotherWrapper {
-        width: 31%;
+        width: 32%;
     }
+
+    .uslugiAnotherTextContent {
+        position: relative;
+        z-index: 2;
+    }
+
+    .uslugiAnotherHeadlineWrapper {
+        
+    }
+    
+    .uslugiAnotherHeadline {
+        font-size: 20px;
+    }
+
+    .uslugiAnotherDesc {
+        font-size: 11px;
+    }
+
+    .uslugiAnotherLinkWrapper {
+        width: 90px;
+    }
+
+    .uslugiAnotherLink {
+        height: 25px;
+
+        margin-top: 26px;
+
+        font-size: 12px;
+
+        border-radius: 6px;
+    }
+
+    .uslugiAnotherImg {
+        width: 135px;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .uslugiAttention {
+        width: 100%;
+        padding: 10px;
+    }
+
+    .uslugiAttentionText {
+        font-size: 12px;
+    }
+
+    .uslugiAttentionImg {
+        width: 20px;
+
+        margin-right: 10px;
+    }
+
+    .uslugiAttentionTextHeadline {
+        margin-bottom: 5px;
+    }
+
+    .uslugi {
+    }
+
+    .uslugiCol3 {
+        flex-direction: column;
+    }
+
+    .uslugiAnotherWrapper {
+        width: 100%;
+
+        margin: 10px 0;
+        padding: 15px;
+    }
+
+    .uslugiShalgbaumAndVideoImg {
+        width: 200px;
+    }
+
+    .uslugiShalgbaumAndVideoHeadline {
+        font-size: 24px;
+    }
+
+    .uslugiShalgbaumAndVideoDesc {
+        font-size: 11px;
+    }
+
+    .uslugiShalgbaumAndVideoListWrapper {
+        margin-top: 15px;
+    }
+
+    .uslugiShalgbaumAndVideoListItem {
+        margin: 12px 0;
+    }
+
+    .uslugiShalgbaumAndVideoListItemImg {
+        width: 24px;
+        margin-right: 6px;
+    }
+
+    .uslugiShalgbaumAndVideoListItemText {
+        font-size: 12px;
+    }
+
+    .uslugiShalgbaumAndVideoLinkWrapper {
+        margin-top: 30px;
+    }
+
+    .uslugiShalgbaumAndVideoLink {
+        width: 140px;
+        height: 30px;
+        font-size: 12px;
+    }
+
+    .uslugiAnotherHeadline {
+        font-size: 24px;
+    }
+
+    .uslugiAnotherDesc {
+        font-size: 13px;
+    }
+
+    .uslugiAnotherLink {
+        margin-top: 16px;
+        font-size: 10px;
+    }
+
 }
