--- a/src/app/pages/uslugi/uslugi.css
+++ b/src/app/pages/uslugi/uslugi.css
@@ -269,6 +269,8 @@
 .forTSSHLozungWrapper {
     display: flex;
     justify-content: space-between;
+
+    margin-top: 20px;
 }
 
 .forTSSHLozungTextWrapper {
@@ -347,14 +349,12 @@
     color: #333;
 }
 
-.forTSZHUslugiItemImg {
-    width: 80px;
-}
-
 
 .forTSZHUslugiList {
     display: flex;
     justify-content: space-between;
+
+    margin-top: 40px;
 }
 
 
@@ -365,26 +365,160 @@
     flex-direction: column;
     justify-content: space-between;
 
-    height: 130px;
+    height: 150px;
 
-    padding: 15px;
+    padding: 25px;
+    box-sizing: border-box;
 
     border-radius: 15px;
 
-    background-color: red;
+    background-color: #e3b418;
+}
+
+.forTSZHUslugiItem1 {
+    width: 32%;
+    background-color: #FFDB40;
+}
+
+.forTSZHUslugiItem2 {
+    width: 42%;
+    background-color: #FFDB40;
+}
+
+.forTSZHUslugiItem3 {
+    width: 20%;
+    background-color: #FFDB40;
+}
+
+.forTSZHUslugiItemHeadlineWrapper {
+    position: relative;
+    z-index: 2;
 }
 
 .forTSZHUslugiItemHeadline {
-    font-size: 20px;
+    font-size: 22px;
 }
 
+.forTSZHUslugiItemLinkWrapper {
+    position: relative;
+    z-index: 2;
 
+    display: flex;
+    justify-content: center;
+
+    width: 120px;
+
+    background-color: #fff;
+
+    border-radius: 10px;
+
+    transition: .3s all;
+}
+
+.forTSZHUslugiItemLinkWrapper:hover {
+    transform: scale(1.05);
+}
+
+.forTSZHUslugiItemLink {
+    display: flex;
+    justify-content: center;
+
+    width: 100%;
+
+    padding: 10px;
+
+    font-size: 18px;
+    color: #333;
+
+    text-decoration: none;
+
+
+}
 
 .forTSZHUslugiItemImg {
     position: absolute;
     right: 15px;
     bottom: 20px;
+
+    width: 100px;
 }
+
+.forTSZHOfferWrapper {
+    height: 350px;
+
+    margin-top: 30px;
+
+}
+
+.forTSZHOffer {
+    height: 100%;
+
+    position: relative;
+
+    padding: 30px;
+    box-sizing: border-box;
+
+    border-radius: 15px;
+    
+
+    background-image: url('/images/uslugi/tszh.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+
+}
+
+.forTSZHOffer::after {
+    content: "";
+    position: absolute;
+
+    z-index: 0;
+
+    inset: 0;
+
+    background: rgba(0, 0, 0, 0.4);
+
+    border-radius: 15px;
+}
+
+.forTSZHOfferHeaderWrapper {
+    position: relative;
+    z-index: 1;
+}
+
+.forTSZHOfferHeader {
+    font-size: 70px;
+    font-weight: 600;
+    color: #fdc713;
+}
+
+.forTSZHOfferParagraph {
+    position: relative;
+    z-index: 1;
+
+    color: #fff;
+    font-size: 32px;
+}
+
+
+
+.forBusines {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.forBusines
+.uslugiHeadlineWrapper {
+    width: 100%;
+}
+
+.forBusinesCol {
+    width: 48%;
+
+    
+}
+
 
 @media screen and (min-width: 1980px) {
     .uslugiAttentionWrapper {
@@ -478,6 +612,79 @@
 
     .uslugiAnotherImg {
         width: 150px;
+    }
+
+
+
+
+    .forTSSHLozungTextWrapper {
+        width: 56%;
+    }
+
+    .forTSSHLozungText {
+        font-size: 36px;
+    }
+
+    .forTSSHLozungText:after {
+        bottom: -30px;
+        width: 100px;
+        height: 10px;
+    }
+
+    .forTSSHLozungAdventage {
+        width: 220px;
+    }
+
+    .forTSSHLozungAdventageIcon {
+        width: 100px;
+    }
+
+    .forTSSHLozungAdventageText {
+        font-size: 18px;
+    }
+
+    .forTSZHUslugiList {
+        margin-top: 60px;
+    }
+
+    .forTSZHUslugiItem  {
+        height: 190px;
+    }
+
+    .forTSZHUslugiItemHeadline {
+        font-size: 26px;
+    }
+
+    .forTSZHUslugiItemImg {
+        width: 130px;
+    }
+
+    .forTSZHUslugiItemLinkWrapper {
+        width: 160px;
+    }
+
+    .forTSZHUslugiItemLink {
+        font-size: 20px;
+    }
+
+
+
+    .forTSZHOfferWrapper {
+        height: 500px;
+    }
+
+    .forTSZHOffer {
+        background-position: center 80%;
+
+        padding: 40px;
+    }
+
+    .forTSZHOfferHeader {
+        font-size: 100px;
+    }
+
+    .forTSZHOfferParagraph {
+        font-size: 46px;
     }
 }
 
@@ -589,6 +796,85 @@
     .uslugiAnotherImg {
         width: 135px;
     }
+
+
+
+
+
+    .forTSSHLozungWrapper {
+        margin-top: 20px;
+    }
+
+    .forTSSHLozungTextWrapper {
+        width: 40%;
+    }
+
+    .forTSSHLozungText {
+        font-size: 20px;
+        margin: 0;
+    }
+
+    .forTSSHLozungAdventages {
+        width: 58%;
+    }
+
+    .forTSSHLozungAdventage {
+        width: 130px;
+    }
+
+    .forTSSHLozungAdventageText {
+        font-size: 12px;
+    }
+
+    .forTSZHUslugiList {
+        margin-top: 50px;
+    }
+
+    .forTSZHUslugiItem  {
+        padding: 15px;
+    }
+
+    .forTSZHUslugiItemHeadline {
+        font-size: 18px;
+    }
+
+    .forTSZHUslugiItemLinkWrapper {
+        width: 100px;
+    }
+
+    .forTSZHUslugiItemLink {
+        padding: 6px 0;
+        font-size: 16px;
+    }
+
+    .forTSZHUslugiItem1 {}
+
+    .forTSZHUslugiItem2 {
+        width: 37%;
+    }
+
+    .forTSZHUslugiItem3 {
+        width: 27%;
+    }
+
+    .forTSZHOfferWrapper {
+        height: 300px;
+    }
+
+    .forTSZHOffer {
+        padding: 20px;
+
+        background-position: center 70%;
+    }
+
+    .forTSZHOfferHeader {
+        font-size: 45px;
+    }
+
+    .forTSZHOfferParagraph {
+        font-size: 24px;
+    }
+
 }
 
 @media screen and (max-width: 576px) {
@@ -677,4 +963,126 @@
         font-size: 10px;
     }
 
+    .forTSSHLozungWrapper {
+        flex-direction: column;
+    }
+
+ 
+
+    .forTSSHLozungAdventages {
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    .forTSSHLozungAdventage {
+        width: 32%;
+    }
+
+    .forTSSHLozungAdventageIcon {
+        width: 50px;
+    }
+
+    .forTSSHLozungAdventageText {
+        font-size: 11px;
+    }
+
+    .forTSSHLozungTextWrapper {
+        width: 100%;
+    }
+
+    
+
+    
+
+
+ 
+
+    .forTSZHUslugiList {
+        margin-top: 40px;
+        flex-wrap: wrap;
+    }
+
+    .forTSZHUslugiItem {
+        padding: 15px;
+    }
+
+    .forTSZHUslugiItem3,
+    .forTSZHUslugiItem1 {
+        width: 48%;
+    }
+
+    .forTSZHUslugiItem2 {
+        width: 100%;
+    }
+
+    .forTSZHUslugiItem1 {
+        order: 2;
+        margin-top: 20px;
+    }
+
+    .forTSZHUslugiItem2 {
+        order: 0;
+    }   
+
+    .forTSZHUslugiItem3 {
+        order: 1;
+        margin-top: 20px;
+    }
+
+    .forTSZHUslugiItem2
+    .forTSZHUslugiItemHeadline {
+        font-size: 20px;
+    }
+
+    .forTSZHUslugiItemLinkWrapper {
+        width: 100px;
+    }
+
+    .forTSZHUslugiItemLink {
+        padding: 5px;
+        font-size: 12px;
+    }
+
+
+    .forTSZHUslugiItem1
+    .forTSZHUslugiItemHeadline,
+    .forTSZHUslugiItem3
+    .forTSZHUslugiItemHeadline {
+        font-size: 16px;
+    }
+
+    .forTSZHUslugiItem1
+    .forTSZHUslugiItemImg,
+    .forTSZHUslugiItem3
+    .forTSZHUslugiItemImg {
+        width: 80px;
+    }  
+
+
+    .forTSZHOfferWrapper {
+        height: 200px;
+
+        margin-top: 40px;
+    }
+
+    .forTSZHOffer {
+        padding: 15px;
+
+        text-align: center;
+
+    }
+
+    .forTSZHOffer:after {
+        background-color: rgba(0, 0, 0, 0.3);
+    }
+
+    .forTSZHOfferHeader {
+        font-size: 30px;
+    }
+
+    .forTSZHOfferParagraph {
+        font-size: 18px;
+    }
+
+    
 }
