--- a/src/app/pages/uslugi/uslugi.css
+++ b/src/app/pages/uslugi/uslugi.css
@@ -501,11 +501,29 @@
 }
 
 
+.forBusinesWrapper {
+    display: flex;
+    justify-content: center;
+}
 
 .forBusines {
+    width: 98%;
+
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+
+    box-sizing: border-box;
+    margin-top: 40px;
+    padding: 20px;
+    
+    border-radius: 40px;
+
+    background-color: #fbedb0;
+
+    -webkit-box-shadow: 0px 12px 12px 5px rgba(34, 60, 80, 0.2);
+    -moz-box-shadow: 0px 12px 12px 5px rgba(34, 60, 80, 0.2);
+    box-shadow: 0px 12px 12px 5px rgba(34, 60, 80, 0.2);
 }
 
 .forBusines
@@ -515,8 +533,28 @@
 
 .forBusinesCol {
     width: 48%;
+}
 
-    
+
+
+
+.forBusinesProblems {
+    display: flex;
+    justify-content: space-between;
+}
+
+.forBusinesProblem {
+    width: 30%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    text-align: center;
+}
+
+.forBusinesProblemImg {
+    width: 60px;
 }
 
 
