вроде доделал uslugi

--- a/src/app/pages/uslugi/uslugi.css
+++ b/src/app/pages/uslugi/uslugi.css
@@ -662,7 +662,7 @@
 
 
 .forStroiCompTextContent {
-    width: 100%;
+    width: 60%;
 
     display: flex;
     justify-content: space-between;
@@ -673,25 +673,111 @@
 }
 
 
-
-
-
-
-
-
-
-
-
-
 .forStroiComp {
     display: flex;
+    justify-content: space-between;
+
+    height: 450px;
+}
+
+.forStroiCompTextContentCol {
+}
+
+.forStroiCompIconContent {
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 
 
+.forStroiCompItemIconWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    margin-bottom: 30px;
+
+    text-align: center;
+}
+
+.forStroiCompItemIcon {
+    width: 110px;
+
+    margin-bottom: 10px;
+}
+
+.forStroiCompSlogan,
+.forStroiCompGarantContent {
+    padding: 20px;
+
+    box-sizing: border-box;
+
+    border-radius: 20px;
+}
+
+.forStroiCompSlogan {
+    background-color: #FFCE4F;
+}
+
+.forStroiCompGarantContent {
+    background-color: #f8c135;
+}
+
+.forStroiCompItemIconText {
+    font-size: 20px;
+}
+
+.forStroiCompLinkWrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.forStroiCompLink {
+    display: flex;
+    justify-content: center;
+
+    width: 95%;
+
+    padding: 15px 0;
+
+    font-size: 18px;
+    text-decoration: none;
+    color: #333;
+
+    border: 3px solid #ffca1b;
+    border-radius: 15px;
+
+    transition: .3s all;
+}
+
+.forStroiCompLink:hover {
+    transform: scale(1.05);
+    background-color: #fff7dc;
+}
+
+.forStroiCompOffer {
+    margin: 0;
+
+    font-size: 33px;
+    line-height: 110%;
+}
+
+.forStroiCompGarant {
+    margin: 0;
+
+    font-size: 28px;
+}
+
+.forStroiCompImgContent {
+    position: relative;
+
+    width: 39%;
+}
+
 .forStroiCompImgWrapper {
-    width: 550px;
-    height: 550px;
+    width: 100%;
+    height: 100%;
 }
 
 .forStroiCompImg {
@@ -699,7 +785,38 @@
     height: 100%;
     object-fit: cover;
 
+    border-radius: 20px;
 }
+
+.forStroiCompUslugaWrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    padding: 20px;
+    box-sizing: border-box;
+
+    border-radius: 20px;
+
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.forStroiCompUslugaParagprah {
+    margin: 0;
+
+    font-size: 40px;
+    color: #f3f3f3;
+}
+
+.forStroiCompUslugaHighlight {
+    font-weight: 600;
+    color: #f8c135;
+}
+
+
 
 @media screen and (min-width: 1980px) {
     .uslugiAttentionWrapper {
@@ -917,6 +1034,50 @@
 
     .forBusnesUslugiItemImg {
         width: 230px;
+    }
+
+
+
+    .forStroiComp {
+        height: 600px;
+    }
+
+    .forStroiCompOffer {
+        font-size: 40px;
+    }
+
+    .forStroiCompGarant {
+        font-size: 36px;
+    }
+
+    .forStroiCompItemIconText {
+        font-size: 24px;
+    }
+
+    .forStroiCompItemIconWrapper {
+        margin-bottom: 50px;
+    }
+
+    .forStroiCompItemIcon {
+        width: 140px;
+        margin-bottom: 20px;
+    }
+
+    .forStroiCompLink {
+        font-size: 22px;
+    }
+
+    .forStroiCompSlogan,
+    .forStroiCompGarantContent {
+        padding: 30px;
+    }
+
+    .forStroiCompUslugaWrapper {
+        padding: 30px;
+    }
+
+    .forStroiCompUslugaParagprah {
+        font-size: 54px;
     }
 }
 
@@ -1138,6 +1299,45 @@
         font-size: 14px;
     }
 
+
+
+    .forStroiComp {
+        display: flex;
+        flex-wrap: wrap;
+
+        height: auto;
+    }
+
+    .forStroiCompTextContent {
+        width: 100%;
+    }
+
+    .forStroiCompItemIcon {
+        width: 80px;
+    }
+
+    .forStroiCompOffer {
+        font-size: 28px;
+    }
+
+    .forStroiCompGarant {
+        font-size: 26px;
+    }
+
+    .forStroiCompLink {
+        width: 80%;
+
+        padding: 10px 0;
+    }
+
+    .forStroiCompImgContent {
+        width: 100%;
+        height: 300px;
+
+        margin-top: 20px;
+
+        text-align: center;
+    }
 }
 
 @media screen and (max-width: 576px) {
@@ -1407,4 +1607,66 @@
         font-size: 22px;
     }
     
+
+    .forStroiComp {
+        flex-direction: column;
+    }
+
+    .forStroiCompTextContentCol {
+        width: 100%;
+    }
+
+    .forStroiCompTextContent {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .forStroiCompImgContent {
+        width: 100%;
+    }
+
+    .forStroiCompOffer {
+        font-size: 22px;
+    }
+
+    .forStroiCompIconContent {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+        margin: 20px 0;
+    }
+
+    .forStroiCompItemIcons {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .forStroiCompItemIconWrapper {
+        width: 48%;
+    }
+
+    .forStroiCompItemIcon {
+        width: 80px;
+    }
+
+    .forStroiCompItemIconText {
+        font-size: 14px;
+    }
+
+    .forStroiCompLink {
+        padding: 8px 0;
+    }
+
+    .forStroiCompGarant {
+        font-size: 20px;
+    }
+
+    .forStroiCompImgContent {
+        margin-top: 20px;
+    }
+
+    .forStroiCompUslugaParagprah {
+        font-size: 28px;
+    }
 }
