делаю форму на странице услуг

--- a/src/app/pages/uslugi/uslugi.css
+++ b/src/app/pages/uslugi/uslugi.css
@@ -818,6 +818,18 @@
 
 
 
+
+
+.uslugiFormTg {
+    display: flex;
+    justify-content: space-between;
+}
+
+.uslugiFormTgCol {
+    width: 48%;
+}
+
+
 @media screen and (min-width: 1980px) {
     .uslugiAttentionWrapper {
         margin-bottom: 40px;
